--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <a href="https://twitter.com/Ak_MaLicious" class="twitter"><i class="bi bi-twitter"></i></a>
         <a href="https://www.facebook.com/AkMaLiciouss/" class="facebook"><i class="bi bi-facebook"></i></a>
         <a href="https://www.instagram.com/ak_malicious/" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="https://www.youtube.com/@Ak_MaL7777" class="youtube"><i class="bi bi-youtube"></i></a>
+        <a href="https://www.youtube.com/@Ak_MaLicious" class="youtube"><i class="bi bi-youtube"></i></a>
       </div>
 
     </div>
